Improve tags formatting

--- a/episodes/001-lamest-superheroes.njk
+++ b/episodes/001-lamest-superheroes.njk
@@ -9,7 +9,10 @@ hosts:
   - Melissa
 bytes: 13373066
 duration: '0:27:51'
-tags: ['episodes', 'superheroes']
+tags:
+  - episodes
+  - superheroes
+
 brian:
   host: Brian
   list:
