--- a/episodes/002-musicals.njk
+++ b/episodes/002-musicals.njk
@@ -9,7 +9,11 @@ hosts:
   - Melissa
 bytes: 16643378
 duration: '0:34:40'
-tags: ['episodes', 'movies', 'musicals']
+tags:
+  - episodes
+  - movies
+  - musicals
+
 brian:
   host: Brian
   list:
