--- a/episodes/004-villains.njk
+++ b/episodes/004-villains.njk
@@ -9,7 +9,12 @@ hosts:
   - Melissa
 bytes: 21954560
 duration: '0:45:44'
-tags: ['episodes', 'villains', 'books', 'movies']
+tags:
+  - episodes
+  - villains
+  - books
+  - movies
+
 brian:
   host: Brian
   list:
