--- a/episodes/005-bible-stories-that-make-us-laugh.njk
+++ b/episodes/005-bible-stories-that-make-us-laugh.njk
@@ -9,7 +9,11 @@ hosts:
   - Melissa
 bytes: 19841024
 duration: '0:41:19'
-tags: ['episodes', 'bible', 'humor']
+tags:
+  - episodes
+  - bible
+  - humor
+
 combined:
   list:
     - 'Ark of God among Philistines destroying Dagon idol (<a href="https://www.biblegateway.com/passage/?search=1+samuel+5&version=KJV">1 Samuel 5</a>)'
