--- a/episodes/006-veggietales-songs.njk
+++ b/episodes/006-veggietales-songs.njk
@@ -9,7 +9,11 @@ hosts:
   - Melissa
 bytes: 12685312
 duration: '0:26:25'
-tags: ['episodes', 'tv', 'music']
+tags:
+  - episodes
+  - tv
+  - music
+
 brian:
   host: Brian
   list:
