--- a/episodes/007-recommendations-for-my-spouse.njk
+++ b/episodes/007-recommendations-for-my-spouse.njk
@@ -9,7 +9,12 @@ hosts:
   - Melissa
 bytes: 16134325
 duration: '0:33:36'
-tags: ['episodes', 'tv', 'movies', 'books']
+tags:
+  - episodes
+  - tv
+  - movies
+  - books
+
 brian:
   host: Brian
   list:
