--- a/episodes/008-actors.njk
+++ b/episodes/008-actors.njk
@@ -9,7 +9,11 @@ hosts:
   - Melissa
 bytes: 23970619
 duration: '0:49:56'
-tags: ['episodes', 'tv', 'movies']
+tags:
+  - episodes
+  - tv
+  - movies
+
 brian:
   host: Brian
   list:
