--- a/episodes/010-worst-things-ive-ever-ingested.njk
+++ b/episodes/010-worst-things-ive-ever-ingested.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 21829647
 duration: '0:45:28'
-tags: ['episodes', 'food']
+tags:
+  - episodes
+  - food
 
 brian:
   host: Brian
