--- a/episodes/011-authors-ive-never-read-but-want-to.njk
+++ b/episodes/011-authors-ive-never-read-but-want-to.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 18119845
 duration: '0:37:45'
-tags: ['episodes', 'books']
+tags:
+  - episodes
+  - books
 
 brian:
   host: Brian
