--- a/episodes/012-improvements-on-idioms-and-proverbs.njk
+++ b/episodes/012-improvements-on-idioms-and-proverbs.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 13080721
 duration: '0:27:15'
-tags: ['episodes', 'language']
+tags:
+  - episodes
+  - language
 
 brian:
   host: Brian
