--- a/episodes/014-animals.njk
+++ b/episodes/014-animals.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 27925141
 duration: '0:58:10'
-tags: ['episodes', 'animals']
+tags:
+  - episodes
+  - animals
 
 brian:
   host: Brian
