--- a/episodes/015-catchphrases-of-shane.njk
+++ b/episodes/015-catchphrases-of-shane.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 6793138
 duration: '0:14:08'
-tags: ['episodes', 'personal']
+tags:
+  - episodes
+  - personal
 
 combined:
   list:
