--- a/episodes/016-board-game-names.njk
+++ b/episodes/016-board-game-names.njk
@@ -9,7 +9,10 @@ hosts:
   - Melissa
 bytes: 25789000
 duration: '0:44:01'
-tags: ['episodes', 'names', 'board-games']
+tags:
+  - episodes
+  - names
+  - board-games
 
 brian:
   host: Brian
