--- a/episodes/017-animated-movies.njk
+++ b/episodes/017-animated-movies.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 33451150
 duration: '0:55:45'
-tags: ['episodes', 'movies']
+tags:
+  - episodes
+  - movies
 
 brian:
   host: Brian
