--- a/episodes/019-memories.njk
+++ b/episodes/019-memories.njk
@@ -9,7 +9,10 @@ hosts:
   - Melissa
 bytes: 37582401
 duration: '1:02:38'
-tags: ['episodes', 'personal', 'sci-fi-christian']
+tags:
+  - episodes
+  - personal
+  - sci-fi-christian
 
 brian:
   host: Brian
