--- a/episodes/020-fictional-creatures.njk
+++ b/episodes/020-fictional-creatures.njk
@@ -10,7 +10,9 @@ hosts:
   - Luke Koser
 bytes: 45897449
 duration: '1:16:29'
-tags: ['episodes', 'animals']
+tags:
+  - episodes
+  - animals
 
 brian:
   host: Brian
