--- a/episodes/021-bucket-list-experiences.njk
+++ b/episodes/021-bucket-list-experiences.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 26327820
 duration: '0:43:53'
-tags: ['episodes', 'personal']
+tags:
+  - episodes
+  - personal
 
 brian:
   host: Brian
