--- a/episodes/022-fast-food-restaurants.njk
+++ b/episodes/022-fast-food-restaurants.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 42532618
 duration: '1:10:53'
-tags: ['episodes', 'food']
+tags:
+  - episodes
+  - food
 
 brian:
   host: Brian
