--- a/episodes/023-comic-book-characters.njk
+++ b/episodes/023-comic-book-characters.njk
@@ -10,7 +10,10 @@ hosts:
   - Zach Koser
 bytes: 45866626
 duration: '1:16:26'
-tags: ['episodes', 'comics', 'characters']
+tags:
+  - episodes
+  - comics
+  - characters
 
 brian:
   host: Brian
