--- a/episodes/024-sci-fi-fantasy-characters.njk
+++ b/episodes/024-sci-fi-fantasy-characters.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 31066696
 duration: '0:51:46'
-tags: ['episodes', 'characters']
+tags:
+  - episodes
+  - characters
 
 brian:
   host: Brian
