--- a/episodes/025-advice-after-five-years-of-marriage.njk
+++ b/episodes/025-advice-after-five-years-of-marriage.njk
@@ -9,7 +9,10 @@ hosts:
   - Melissa
 bytes: 30247244
 duration: '0:50:24'
-tags: ['episodes', 'personal', 'advice']
+tags:
+  - episodes
+  - personal
+  - advice
 
 combined:
   list:
