--- a/episodes/028-books-2016.njk
+++ b/episodes/028-books-2016.njk
@@ -9,7 +9,10 @@ hosts:
   - Melissa
 bytes: 60761897
 duration: '1:41:16'
-tags: ['episodes', 'books', 'annual']
+tags:
+  - episodes
+  - books
+  - annual
 
 brian:
   host: Brian
