--- a/episodes/029-board-games-2016.njk
+++ b/episodes/029-board-games-2016.njk
@@ -10,7 +10,11 @@ hosts:
   - Jay Champagne
 bytes: 69182213
 duration: '1:55:18'
-tags: ['episodes', 'board games', 'annual', 'guest']
+tags:
+  - episodes
+  - board-games
+  - annual
+  - guest
 
 brian:
   host: Brian
