--- a/episodes/031-bible-characters.njk
+++ b/episodes/031-bible-characters.njk
@@ -9,7 +9,10 @@ hosts:
   - Melissa
 bytes: 48576834
 duration: '1:07:27'
-tags: ['episodes', 'bible', 'characters']
+tags:
+  - episodes
+  - bible
+  - characters
 
 brian:
   host: Brian
