--- a/episodes/032-moral-dilemmas.njk
+++ b/episodes/032-moral-dilemmas.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 29832256
 duration: '0:49:42'
-tags: ['episodes', 'ethics']
+tags:
+  - episodes
+  - ethics
 
 combined:
   list:
