--- a/episodes/033-flavor-combos.njk
+++ b/episodes/033-flavor-combos.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 21038014
 duration: '0:35:04'
-tags: ['episodes', 'food']
+tags:
+  - episodes
+  - food
 
 brian:
   host: Brian
