--- a/episodes/034-reasons-lost-is-great.njk
+++ b/episodes/034-reasons-lost-is-great.njk
@@ -9,7 +9,10 @@ hosts:
   - Melissa
 bytes: 43154071
 duration: '1:11:55'
-tags: ['episodes', 'tv', 'lost-month']
+tags:
+  - episodes
+  - tv
+  - lost-month
 
 combined:
   host: Totally Not Shoehorned Top Ten
