--- a/episodes/035-lost-characters.njk
+++ b/episodes/035-lost-characters.njk
@@ -9,7 +9,11 @@ hosts:
   - Melissa
 bytes: 52059730
 duration: '1:26:46'
-tags: ['episodes', 'tv', 'lost-month', 'characters']
+tags:
+  - episodes
+  - tv
+  - lost-month
+  - characters
 
 brian:
   host: Brian
