--- a/episodes/036-lost-episodes.njk
+++ b/episodes/036-lost-episodes.njk
@@ -9,7 +9,10 @@ hosts:
   - Melissa
 bytes: 62675369
 duration: '1:44:27'
-tags: ['episodes', 'tv', 'lost-month']
+tags:
+  - episodes
+  - tv
+  - lost-month
 
 brian:
   host: Brian
