--- a/episodes/038-grunts.njk
+++ b/episodes/038-grunts.njk
@@ -9,7 +9,9 @@ hosts:
   - Melissa
 bytes: 2813420
 duration: '0:04:41'
-tags: ['episodes', 'april-fools']
+tags:
+  - episodes
+  - april-fools
 
 brian:
   host: Brian
