--- a/episodes/039-sports.njk
+++ b/episodes/039-sports.njk
@@ -9,7 +9,9 @@ hosts:
   - Matt Koser
 bytes: 62028831
 duration: '1:43:23'
-tags: ['episodes', 'sports']
+tags:
+  - episodes
+  - sports
 
 brian:
   host: Brian
