--- a/episodes/003-podcasts.njk
+++ b/episodes/003-podcasts.njk
@@ -9,7 +9,11 @@ hosts:
   - Melissa
 bytes: 17743238
 duration: '0:36:58'
-tags: ['episodes', 'podcasts', 'sci-fi-christian']
+tags:
+  - episodes
+  - podcasts
+  - sci-fi-christian
+
 brian:
   host: Brian
   list:
