--- a/episodes/018-hymns.njk
+++ b/episodes/018-hymns.njk
@@ -9,7 +9,10 @@ hosts:
   - Melissa
 bytes: 36594969
 duration: '1:00:59'
-tags: ['episodes', 'music', 'christian']
+tags:
+  - episodes
+  - music
+  - christian
 
 brian:
   host: Brian
