--- a/episodes/030-animated-movie-characters.njk
+++ b/episodes/030-animated-movie-characters.njk
@@ -10,7 +10,11 @@ hosts:
   - Megan Koser
 bytes: 48576834
 duration: '1:20:57'
-tags: ['episodes', 'movies', 'characters', 'guest']
+tags:
+  - episodes
+  - movies
+  - characters
+  - guest
 
 brian:
   host: Brian
