--- a/episodes/037-lost-moments.njk
+++ b/episodes/037-lost-moments.njk
@@ -9,7 +9,10 @@ hosts:
   - Melissa
 bytes: 32193344
 duration: '0:53:39'
-tags: ['episodes', 'tv', 'lost-month']
+tags:
+  - episodes
+  - tv
+  - lost-month
 
 brian:
   host: Brian
