--- a/episodes/058-crazy-baby-names.njk
+++ b/episodes/058-crazy-baby-names.njk
@@ -26,7 +26,7 @@ brian:
     - Black Baby Koser
     - Baron Von Koser
     - Frenchie Frye Koser
-listMelissa:
+melissa:
   host: Melissa
   list:
     - Starbuck Godiva Koser
