--- a/episodes/044-pop-culture-quotes.njk
+++ b/episodes/044-pop-culture-quotes.njk
@@ -24,7 +24,7 @@ brian:
     - {"title": "“Oh, no!”, <i class='movie-title'>How the Grinch Stole Christmas</i>", "id": "Ak6Pr5VdmK8", "timestamp": "4:38"}
     - {"title": "“Didja?”, <i class='movie-title'>The Rescuers Down Under</i>", "id": "rHmjiPLpKVk"}
     - {"title": "“You never can tell with bees.”, <i class='movie-title'>The Many Adventures of Winnie the Pooh</i>", "id": "aYqA58N3sEE", "timestamp": "3:30"}
-    - {"title": "“No is no is no.”, <i class='movie-title'>The Rescuers Down Under</i>", "id": "bhq0dLeZzqo", "timestamp": "1:09"}
+    - {"title": "“No is no is no.”, <i class='movie-title'>The Rescuers Down Under</i>", "id": "amm02KaKDBM", "timestamp": "1:09"}
     - {"title": "“Who outsmarted who, who who outsmarted who.”, <i class='movie-title'>The Rescuers Down Under</i>", "id": "9U6oqFCE440", "timestamp": "3:40"}
     - {"title": "“It is a clue, Frank!”, The Harty Boys", "id": "EA0ziLh7y78"}
     - {"title": "“These are not, Joanna eggs!”, <i class='movie-title'>The Rescuers Down Under</i>", "id": "wfQTabN7LIQ"}
@@ -32,7 +32,7 @@ melissa:
   host: Melissa
   list:
     - {"title": "“Two alone people. Together…alone.”, <i class='tv-title'>The Legend of Korra</i>"}
-    - {"title": "“Baby steps.”, <i class='movie-title'>What About Bob?</i>"}
+    - {"title": "“Baby steps.”, <i class='movie-title'>What About Bob?</i>", "id": "Yl6s6DGapug"}
     - {"title": "“I made a difference to that one!”, cheesy starfish story commercial"}
     - {"title": "“Spicy!”, Flip the Table commercial starring Chaz Marler"}
     - {"title": "“It gives us something to think about, something to drink about!”, <i class='movie-title'>Fiddler on the Roof</i>", "id": "YjEDgvNP0NU"}
