--- a/episodes/075-doctor-who-moments.njk
+++ b/episodes/075-doctor-who-moments.njk
@@ -21,7 +21,7 @@ brian:
     - Eleventh Doctor realizes all the statues in the cavern are Weeping Angels (The Time of Angels)
     - Doctor and Donna see each other through glass (Partners in Crime)
     - Van Gogh travels to the future and finds out what his legacy will be. (Vincent and The Doctor)
-    - "Everybody lives, Rose. Just this once. Everybody lives!" (The Doctor Dances)
+    - "\"Everybody lives, Rose. Just this once. Everybody lives!\" (The Doctor Dances)"
     - Telling Rose goodbye / Donna appears on TARDIS (Doomsday)
     - The Doctor Wakes Up (The Christmas Invasion)
     - Eleven regenerates (The Time of the Doctor)
