Finish Brian bio

--- a/about.njk
+++ b/about.njk
@@ -4,8 +4,13 @@ brian:
     host: Brian
     list:
         - <a href="https://koser.us/brian">Personal website</a>
-        - I am compelled to rank everything. And I like to talk.
-        - "Favorite episode: <a href='/episodes/003-podcasts'>№ 3 Podcats</a>"
+        - I'm compelled to rank everything. And I like to talk.
+        - Professional software developer. I like building websites.
+        - Hobbies include reading and playing modern board games.
+        - I've tracked <a href="/episodes/040-1000-books">every book that I've read</a> since I was 8.
+        - I have six siblings, including a brother that is 24 years younger than me.
+        - I'm currently craving Snyder's of Hanover Hot Buffalo Wing pretzels.
+        - "Favorite episode: <a href='/episodes/064-great-songs'>№ 64 Great Songs</a>"
         - "Favorite punctuation mark: ?"
         - "Favorite emoji: ⚗️"
 melissa:
@@ -14,11 +19,15 @@ melissa:
         - <a href="https://koser.us/melissa">Personal website</a>
         - about melissa
         - "Favorite episode: <a href='/episodes/002-musicals'>№ 2 Musicals</a>"
+        - 
+        - 
+        - 
+        - 
+        - 
+        - 
+        - 
 ---
 <h1>About</h1>
-
-{# Mobile: full screen picture of each host saturated to hosts color, bio overlaid
-Desktop: same, but left side is Melissa, right half is Brian #}
 
 <div class="about">
     {% list melissa %}
