Add comments message

--- a/_includes/layouts/episode.njk
+++ b/_includes/layouts/episode.njk
@@ -42,7 +42,7 @@ layout: base
         <div class="feedback">
             <h2>Feedback</h2>
             <p>{% icon 'mail' %} Email <a href="mailto:tto@koser.us">tto@koser.us</a></p>         
-            {# <div class="comments">implement comments here</p> #}
+            <div class="comments">Comments temporarily disabled with the new design. They will return.</p>
         </div>
     </div>
     
