Add masthead, style icons

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -12,7 +12,8 @@
     <body>
         <header class="site-header js-site-nav">
             <div class="header-flex">
-                <img alt="Ten to One">
+                <img alt="" title="Ten to One logo">
+                <h1 class="masthead">Ten to One</h1>
                 <a id="site-nav-link" href="#site-nav" class="menu-link">{% icon 'menu-hamburger' %} Menu</a>
             </div>
             <nav id="site-nav" class="site-nav js-site-nav">
