--- a/css/site.css
+++ b/css/site.css
@@ -483,9 +483,12 @@ kbd kbd {
     --layer2: var(--color-black);
 }
 
-.icon-mail,
-.icon-rss {
+.icon-mail {
     top: 0.2em;       
+}
+
+.icon-rss {
+    top: 0.1em;       
 }
 
 .icon-headphones-user,
@@ -528,6 +531,12 @@ kbd kbd {
     justify-content: space-between;
     align-items: center;
     padding: 1.3em;
+}
+
+.site-header .masthead {
+    font-family: Concourse, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+    font-size: 2em;
+    margin-top: 0;
 }
 
 .site-main {
@@ -637,7 +646,7 @@ kbd kbd {
 
 .episode-block .episode {
     display: flex;
-    align-items: baseline;
+    align-items: center;
 }
 
 .episode-block .episode {
@@ -929,6 +938,10 @@ kbd kbd {
         padding: 0;
     }
 
+    .site-header .masthead {
+        font-size: 3em;
+    }
+
     .site-main {
         padding: 1.3em;
     }
@@ -977,8 +990,12 @@ kbd kbd {
         top: 0.1em;
     }
 
+    .icon-mail {
+        top: 0.2em;       
+    }
+    
     .icon-rss {
-        top: 0.25em;
+        top: 0.1em;       
     }
 
 
