Free the ampersands!

--- a/episodes/004-villains.njk
+++ b/episodes/004-villains.njk
@@ -25,7 +25,7 @@ brian:
     - 'Captain Hook, <i class="book-title">Peter Pan</i>'
     - 'Mirror-Universe Spock, <i class="movie-title">Star Trek</i>'
     - 'Zaheer, <i class="movie-title">Legend of Korra</i>'
-    - 'The Gentleman with the Thistledown Hair, <i class="book-title">Jonathan Strange &amp; Mr. Norrell</i>'
+    - 'The Gentleman with the Thistledown Hair, <i class="book-title">Jonathan Strange & Mr. Norrell</i>'
     - 'Thrawn, <i class="movie-title">Star Wars</i>'
     - 'Prince Zuko, <i class="movie-title">Avatar: The Last Airbender</i>'
 melissa:
