--- a/episodes/020-fictional-creatures.njk
+++ b/episodes/020-fictional-creatures.njk
@@ -37,7 +37,7 @@ melissa:
     - {"title": "Zoras/Merpeople", "url": "http://zelda.wikia.com/wiki/Zora"}
     - {"title": "Jinn", "url": "https://en.m.wikipedia.org/wiki/Jinn"}
     - {"title": "Weeping Angels", "url": "https://en.m.wikipedia.org/wiki/Weeping_Angel"}
-    - {"title": "Fairies (Peter Pan, Artemis Fowl, Jonathan Strange &amp; Mr. Norrell)", "url": "https://en.m.wikipedia.org/wiki/Fairy"}
+    - {"title": "Fairies (Peter Pan, Artemis Fowl, Jonathan Strange & Mr. Norrell)", "url": "https://en.m.wikipedia.org/wiki/Fairy"}
     - {"title": "Dragons", "url": "https://en.m.wikipedia.org/wiki/Dragon"}
     - {"title": "Gargoyles", "url": "http://disney.wikia.com/wiki/Manhattan_Clan"}
 luke:
