--- a/episodes/022-fast-food-restaurants.njk
+++ b/episodes/022-fast-food-restaurants.njk
@@ -17,7 +17,7 @@ brian:
   host: Brian
   list:
     - Krispy Kreme
-    - Five Guys Burgers &amp; Fries
+    - Five Guys Burgers & Fries
     - Firehouse Subs
     - Buffalo Wild Wings
     - Pizza Hut
