--- a/episodes/064-great-songs.njk
+++ b/episodes/064-great-songs.njk
@@ -43,7 +43,7 @@ melissa:
   playlistID: PL8c-Yg_oDsbMDfvbp1VbAO8radiwkWthX
 
 notes:
-  - <a href="https://www.rollingstone.com/music/lists/the-500-greatest-songs-of-all-time-20110407?index=401&amp;limit=1">Rolling Stone 100 Greatest Songs of All Time</a>
+  - <a href="https://www.rollingstone.com/music/lists/the-500-greatest-songs-of-all-time-20110407?index=401&limit=1">Rolling Stone 100 Greatest Songs of All Time</a>
 ---
 
 {% youtubeList melissa %}
