--- a/episodes/097-games-to-play-on-the-dice-tower-cruise.njk
+++ b/episodes/097-games-to-play-on-the-dice-tower-cruise.njk
@@ -21,7 +21,7 @@ brian:
     - {"title": "Panic on Wall Street!", "id": "104581"}
     - {"title": "Quadropolis", "id": "176396"}
     - {"title": "Century: Spice Road", "id": "209685"}
-    - {"title": "Heroes of Land, Air &amp; Sea", "id": "198830"}
+    - {"title": "Heroes of Land, Air & Sea", "id": "198830"}
     - {"title": "Le Havre", "id": "35677"}
     - {"title": "Blood Rage", "id": "170216"}
     - {"title": "Keyflower", "id": "122515"}
