children-advice tag

--- a/episodes/085-baby-essentials.njk
+++ b/episodes/085-baby-essentials.njk
@@ -11,8 +11,7 @@ bytes: 21897184
 duration: '0:36:30'
 tags:
   - episodes
-  - advice
-  - children
+  - children-advice
 
 melissa:
   host: Melissa
