--- a/episodes/095-pregnancy-and-post-partum-advice.njk
+++ b/episodes/095-pregnancy-and-post-partum-advice.njk
@@ -11,8 +11,7 @@ bytes: 27120123
 duration: '0:45:11'
 tags:
   - episodes
-  - advice
-  - children
+  - children-advice
 
 melissa:
   host: Melissa
