--- a/episodes/index.njk
+++ b/episodes/index.njk
@@ -7,7 +7,7 @@ layout: base
     <article class="h-entry">
         <h2><a href="{{ episode.url }}" class="p-name">№ {{ episode.data.number }} {{ episode.data.title }}</a></h2>
         <p>
-            <time class="dt-published" datetime='{{ episode.date }}'>{{ episode.date | readableDate }}</time> · {{ episode.data.description }}
+            <time class="dt-published" datetime='{{ episode.date | machineDate }}'>{{ episode.date | readableDate }}</time> · {{ episode.data.description }}
         </p>
     </article>
 {%- endfor -%}
