Iterate about Brian

--- a/about.njk
+++ b/about.njk
@@ -5,10 +5,10 @@ brian:
     list:
         - <a href="https://koser.us/brian">Personal website</a>
         - I'm compelled to rank everything. And I like to talk.
-        - Professional software developer. I like building websites.
-        - Hobbies include reading and playing modern board games.
-        - I've tracked <a href="/episodes/040-1000-books">every book that I've read</a> since I was 8.
-        - I have six siblings, including a brother that is 24 years younger than me.
+        - Professional software developer. I build websites professionally and as a hobby.
+        - Other hobbies include reading and playing modern board games.
+        - Tracked <a href="/episodes/040-1000-books">every book that I've read</a> since I was 8.
+        - Oldest of six, including a brother that is 24 years younger than me.
         - I'm currently craving Snyder's of Hanover Hot Buffalo Wing pretzels.
         - "Favorite episode: <a href='/episodes/064-great-songs'>№ 64 Great Songs</a>"
         - "Favorite punctuation mark: ?"
@@ -17,8 +17,8 @@ melissa:
     host: Melissa
     list:
         - <a href="https://koser.us/melissa">Personal website</a>
-        - about melissa
-        - "Favorite episode: <a href='/episodes/002-musicals'>№ 2 Musicals</a>"
+        - 
+        - 
         - 
         - 
         - 
