New site colors

--- a/css/site.css
+++ b/css/site.css
@@ -124,10 +124,16 @@
     VARIABLES
 */
 :root {
-    --color-primary: orangered;
-    --color-black: rgb(38, 38, 38);
-    --color-white: white;
-    --color-dark-grey: rgb(70, 70, 70);
+    /* 
+        Acceptable WCAG contrast ratio combos:
+            - black and primary
+            - black and secondary
+            - black and white
+    */
+    --color-primary: hsl(14, 97%, 52%);
+    --color-secondary: hsl(198, 76%, 52%);
+    --color-black: hsl(245, 67%, 24%);
+    --color-white: hsl(53, 95%, 74%);
 }
 
 
@@ -513,7 +519,7 @@ kbd kbd {
 }
 
 .site-header a:hover {
-    background-color: var(--color-dark-grey);
+    background-color: var(--color-secondary);
 }
 
 .site-header {
@@ -537,6 +543,7 @@ kbd kbd {
     font-family: Concourse, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
     font-size: 2em;
     margin-top: 0;
+    display: none;
 }
 
 .site-main {
@@ -545,7 +552,7 @@ kbd kbd {
 
 .site-footer {
     grid-area: footer;
-    background-color: var(--color-dark-grey);
+    background-color: var(--color-secondary);
     padding: 2em 1em;
 }
 
@@ -727,7 +734,7 @@ kbd kbd {
 }
 
 .post .spoilers summary {
-    background-color: var(--color-dark-grey);
+    background-color: var(--color-secondary);
     list-style-image: url(/icons/orion/icon-plus-circle-white.svg);
     padding: 1em;
     margin-left: -1em;
@@ -940,6 +947,7 @@ kbd kbd {
 
     .site-header .masthead {
         font-size: 3em;
+        display: block;
     }
 
     .site-main {
