--- a/css/site.css
+++ b/css/site.css
@@ -2,31 +2,6 @@
     FONTS
 */
 @font-face {
-    font-family: ConcourseBlack;
-    src:
-        local("Concourse T8"), 
-        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t8_regular.woff2") format("woff2"), 
-        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t8_regular.woff") format("woff"); 
-}
-
-@font-face {
-    font-family: ConcourseLight;
-    src:
-        local("Concourse T2"), 
-        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_regular.woff2") format("woff2"), 
-        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_regular.woff") format("woff"); 
-}
-
-@font-face {
-    font-family: ConcourseLight;
-    src:
-        local("Concourse T2 Italic"), 
-        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_italic.woff2") format("woff2"), 
-        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_italic.woff") format("woff");
-    font-style: italic; 
-}
-
-@font-face {
     font-family: Concourse;
     src:
         local("Concourse T4"),
@@ -160,6 +135,8 @@ body, .body {
     font-family: Concourse, OpenSansNumero, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 20px;
     line-height: 1.3;
+
+    background-color: var(--color-white);
     color: var(--color-black);
     margin-bottom: 0;
     font-variant-ligatures: common-ligatures;
@@ -204,11 +181,6 @@ h4:first-child,
 h5:first-child,
 h6:first-child {
   margin: 0; 
-}
-
-h1, .h1,
-h2, .h2 {
-  font-family: ConcourseLight, OpenSansLightNumero, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; 
 }
 
 h1, .h1 {
@@ -348,6 +320,10 @@ a {
   white-space: nowrap;
 }
 
+h2 a {
+    white-space: initial;
+}
+
 kbd kbd {
     background-color: #f7f7f7;
     border: 1px solid #ccc;
@@ -480,11 +456,6 @@ kbd kbd {
     position: relative;
     top: 0.125em;
     flex-shrink: 0;
-    --layer1: var(--color-white);
-    --layer2: var(--color-white);
-}
-
-.site-main .icon {
     --layer1: var(--color-black);
     --layer2: var(--color-black);
 }
@@ -514,17 +485,11 @@ kbd kbd {
 .site-header a,
 .site-footer,
 .site-footer a {
-    color: var(--color-white);
     text-decoration: none;
-}
-
-.site-header a:hover {
-    background-color: var(--color-secondary);
 }
 
 .site-header {
     grid-area: header;
-    background-color: var(--color-primary);
     padding: 1em 0;
 }
 
@@ -532,11 +497,8 @@ kbd kbd {
     padding: 1em 0 0 0;
 }
 
-.header-flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.3em;
+.site-header a:hover {
+    background-color: var(--color-secondary);
 }
 
 .site-header .masthead {
@@ -546,6 +508,13 @@ kbd kbd {
     display: none;
 }
 
+.site-header .header-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0 1rem 1rem;
+}
+
 .site-main {
     grid-area: main;
 }
@@ -553,7 +522,7 @@ kbd kbd {
 .site-footer {
     grid-area: footer;
     background-color: var(--color-secondary);
-    padding: 2em 1em;
+    padding: 1em;
 }
 
 .site-footer a:hover {
@@ -562,6 +531,13 @@ kbd kbd {
 
 .site-footer ol {
     list-style: none;
+    margin: 0;
+}
+
+.site-nav-links,
+.site-nav-footer {
+    padding: 1em 0;
+    font-weight: bold;
 }
 
 
@@ -573,6 +549,8 @@ kbd kbd {
     SITE NAV
 */
 .site-nav {
+    background-color: var(--color-primary);
+    font-size: 1.5625rem;
     -webkit-transition: all 0.3s ease-in-out;  
        -moz-transition: all 0.3s ease-in-out;
         -ms-transition: all 0.3s ease-in-out;
@@ -589,7 +567,7 @@ kbd kbd {
     max-height: 26em;
 }
 
-.site-nav ol {
+.site-nav .site-nav-links {
     margin: 0;
     padding: 0;
 }
@@ -598,11 +576,12 @@ kbd kbd {
 .site-nav li > a,
 .site-nav .site-nav-footer a {
     display: block;
-    padding: 1.3em;
+    padding: 1em 1em 1.3em 1em;
 }
 
 .site-nav .site-nav-episodes {
     background-color: var(--color-black);
+    color: var(--color-primary);
     padding: 1.3em;
 }
 
@@ -621,6 +600,12 @@ kbd kbd {
 */
 .home-episodes {
     margin-top: 2.6rem;
+}
+
+.home-episodes h2 {
+    font-size: 1rem;
+    line-height: 0.65rem;
+    text-transform: uppercase;
 }
 
 
@@ -672,6 +657,10 @@ kbd kbd {
 .episode-card header,
 .episode-card .summary {
     margin-top: 0.65rem;
+}
+
+.episode-card header {
+    font-weight: bold;
 }
 
 .episode-card a {
@@ -937,7 +926,7 @@ kbd kbd {
         grid-template-areas: 
             "header main" 
             "header footer";
-        row-gap: 2.6rem;
+        row-gap: 0;
     }
 
     .site-header {
@@ -948,6 +937,9 @@ kbd kbd {
     .site-header .masthead {
         font-size: 3em;
         display: block;
+        line-height: 1em;
+        text-align: right;
+        font-style: italic;
     }
 
     .site-main {
@@ -973,6 +965,7 @@ kbd kbd {
     */
     a.menu-link {
         display: none;
+        text-transform: uppercase;
     }
 
     .js .site-nav {
@@ -982,6 +975,14 @@ kbd kbd {
     .site-nav .episode-info,
     .site-nav .site-nav-footer {
         margin-top: 1.3em;
+    }
+
+    .site-footer {
+        padding: 3em;
+    }
+
+    .site-footer ol {
+        float: right;
     }
 
 
@@ -1013,7 +1014,7 @@ kbd kbd {
     */
     .headline {
         font-size: 1.5em;
-        margin-top: 3.9rem;
+        margin-top: 3.9rem; /* todo: remove this and redo grid to align this below masthead on desktop */
     }
 
 
