--- a/episodes/103-books-2018.njk
+++ b/episodes/103-books-2018.njk
@@ -44,7 +44,7 @@ melissa:
 notes:
   - <a href="https://www.goodreads.com/user/show/4812558-brian-koser">Brian</a> on Goodreads
   - <a href="https://www.goodreads.com/user/show/54340861-melissa">Melissa</a> on Goodreads
-  - <a href="https://hugospodcast.com/podcast/hugos-there-podcast-23-jonathan-strange-mr-norrell-feat-brian-koser/">Hugos There Podcast #23: Jonathan Strange & Mr. Norrell, by Susanna Clarke (feat. Brian Koser)</a></li>
+  - <a href="https://hugospodcast.com/podcast/hugos-there-podcast-23-jonathan-strange-mr-norrell-feat-brian-koser/">Hugos There Podcast &#35;23&#58; Jonathan Strange & Mr. Norrell, by Susanna Clarke (feat. Brian Koser)</a>
 ---
 {% bookList melissa %}
 {% bookList brian %}
