Quote strings with colons (fixes #29)

--- a/episodes/111-actors-revisited.njk
+++ b/episodes/111-actors-revisited.njk
@@ -74,7 +74,7 @@ josh:
 notes:
   - <a href="https://letterboxd.com/bkoser/">Brian’s Letterboxd account</a>
   - <a href="https://letterboxd.com/mkoser/">Melissa’s Letterboxd account</a>
-  - <a href="https://letterboxd.com/bkoser/film/star-wars-the-last-jedi/">Brian’s <i>Star Wars: The Last Jedi</i> review</a>
+  - "<a href='https://letterboxd.com/bkoser/film/star-wars-the-last-jedi/'>Brian’s <i>Star Wars: The Last Jedi</i> review</a>"
 youtubeNotes:
   - {"id": "NZ6UuF85ENA", "caption": "John Candy in <i class='movie-title'>The Volunteers</i>"}
   - {"id": "Q6Fuxkinhug", "caption": "John Malkovich in <i class='movie-title'>Being John Malkovich</i>"}
