--- a/subscribe.njk
+++ b/subscribe.njk
@@ -47,10 +47,10 @@ layout: base
 </div>
 
 <div class="accordion">
-    <h2 id="tab2" class="tab accordion" aria-controls="panel2" role="tab" tabindex="-1">
+    <h2 id="tab2" class="tab" aria-controls="panel2" role="tab" tabindex="-1">
         {% icon 'apple' %} iPhone or iPad
     </h2>
-    <div id="panel2" class="panel accordion" aria-labeledby="tab2" role="tabpanel">
+    <div id="panel2" class="panel" aria-labeledby="tab2" role="tabpanel">
         <ol>
             <li>
                 <p>Open the <kbd><samp>Podcasts</samp></kbd> app on your iPhone or iPad.</p>
@@ -79,10 +79,10 @@ layout: base
 </div>
 
 <div class="accordion">
-    <h2 id="tab3" class="tab accordion" aria-controls="panel3" role="tab" tabindex="-1">
+    <h2 id="tab3" class="tab" aria-controls="panel3" role="tab" tabindex="-1">
         {% icon 'windows' %} Windows
     </h2>
-    <div id="panel3" class="panel accordion" aria-labeledby="tab3" role="tabpanel">
+    <div id="panel3" class="panel" aria-labeledby="tab3" role="tabpanel">
         <ol>
             <li>
                 <p>Download and install <a href="https://www.apple.com/itunes/">iTunes</a>.
