--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -10,29 +10,27 @@
         <link rel="stylesheet" href="/css/site.css" />
     </head>
     <body>
-        <header class="site-header js-site-nav">
-            <div class="header-flex">
-                <img class="site-logo" src="/img/logo.svg">
-                <h1 class="masthead">Ten to One</h1>
-                <a id="site-nav-link" href="#site-nav" class="menu-link">{% icon 'menu-hamburger' %} Menu</a>
-            </div>
-            <nav id="site-nav" class="site-nav js-site-nav">
-                <ol class="site-nav-links">
-                    <li><a href="/">{% icon 'property' %} Home</a>
-                    <li><a href="/episodes/">{% icon 'microphone' %} Episodes</a>
-                    <li><a href="/about/">{% icon 'user-group' %} About</a>
-                    <li><a href="/subscribe/">{% icon 'headphones-user' %} Subscribe</a>
-                </ol>
-                <div class="site-nav-episodes">
-                    {% episodeBlock collections.episodes | last, "Latest", metadata.cdn_url %}
-                    {# <div><a href="#">Recommended</a></div> #}
-                </div>
-                <div class="site-nav-footer">
-                    <a href="/feed.rss">{% icon 'rss' %} RSS</a>
-                    <a href="mailto:tto@koser.us">{% icon 'mail' %} tto@koser.us</a>
-                </div>
-            </nav>
+        <header class="site-header header-flex">
+            <img class="site-logo" src="/img/logo.svg">
+            <h1 class="masthead">Ten to One</h1>
+            <a id="site-nav-link" href="#site-nav" class="menu-link">{% icon 'menu-hamburger' %} Menu</a>
         </header>
+        <nav id="site-nav" class="site-header site-nav js-site-nav">
+            <ol class="site-nav-links">
+                <li><a href="/">{% icon 'property' %} Home</a>
+                <li><a href="/episodes/">{% icon 'microphone' %} Episodes</a>
+                <li><a href="/about/">{% icon 'user-group' %} About</a>
+                <li><a href="/subscribe/">{% icon 'headphones-user' %} Subscribe</a>
+            </ol>
+            <div class="site-nav-episodes">
+                {% episodeBlock collections.episodes | last, "Latest", metadata.cdn_url %}
+                {# <div><a href="#">Recommended</a></div> #}
+            </div>
+            <div class="site-nav-footer">
+                <a href="/feed.rss">{% icon 'rss' %} RSS</a>
+                <a href="mailto:tto@koser.us">{% icon 'mail' %} tto@koser.us</a>
+            </div>
+        </nav>
         <main class="site-main">
             {{ content | safe }}
         </main>
@@ -40,7 +38,7 @@
             <ol>
                 <li>{% icon 'podcast' %} Podcast by <a class="h-card" href="http://koser.us/melissa">Melissa</a> & <a class="h-card" href="http://koser.us/brian">Brian Koser</a>
                 <li>{% icon 'design' %} Website by <a class="h-card" href="http://koser.us/brian">Brian Koser</a>
-                <li>{% icon 'color-palette' %} Logo by <a class="h-card" href="">Matt Koser</a>
+                <li>{% icon 'color-palette' %} Logo by Matt Koser
             </ol>
         </footer>
         <script src="/js/site.js"></script>
